--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vscode": "^1.1.37"
   },
   "dependencies": {
+    "csv-parse": "^5.6.0",
     "fuzzysort": "^3.1.0",
     "linkify-string": "^4.3.0",
     "lit-html": "^3.2.1"
