smaller border on docs images

--- a/ext/editor/package.json
+++ b/ext/editor/package.json
@@ -3,7 +3,7 @@
   "displayName": "Explan - Gantt Chart Editor",
   "description": "Create and edit gantt charts for project planning.",
   "version": "0.0.4",
-  "publisher": "Explan-org",
+  "publisher": "explan-org",
   "icon": "images/logo2-128x128.png",
   "repository": {
     "type": "git",
